Misc. cleanup (#95)
* Run tests by adding missing @Test annotations
* Rewrite some tests for clarity and terseness, occasionally add or tighten one.
* Many further minor corrections and polish